<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EnterEmailCredentialsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_email_credentials"
        />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/edit_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email_address"
        />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/edit_email_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onEnterEmailCredentialsNextButtonClick"
        android:text="@string/next"
        />

</LinearLayout>